Fedora rawhide is broken

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ fedora-gcc-x86_64:
 
 fedora-clang-x86_64:
   stage: build
-  image: fedora:rawhide
+  image: fedora:latest
   except:
     - tags
   variables:
@@ -41,6 +41,7 @@ fedora-clang-x86_64:
     - make -j4
     - make -j4 bootstrap
     - make -j4 check VERBOSE=1
+  allow_failure: true
 
 ubuntu-clang-x86_64:
   stage: build
